--- a/Tappity/Base.lproj/Main.storyboard
+++ b/Tappity/Base.lproj/Main.storyboard
@@ -39,7 +39,9 @@
                                 <rect key="frame" x="112" y="258" width="150" height="150"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="Tap Me"/>
+                                <state key="normal" title="Tap Me">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="mainButtonPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dSd-I3-pEB"/>
                                 </connections>
@@ -63,6 +65,7 @@
                         <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <connections>
+                        <outlet property="mainButton" destination="T64-R8-oXK" id="vlL-SC-VI1"/>
                         <outlet property="scoreLabel" destination="7WB-S6-Hju" id="FGj-Xo-rJ5"/>
                         <outlet property="timeLabel" destination="bkQ-CR-XrN" id="0TV-fb-2zh"/>
                     </connections>
